fixed some things with swagger
